@@ -4,8 +4,13 @@ Signal.trap("INT") { puts; exit }
 require File.dirname(__FILE__) + '/../lib/rails/version'
 abort "Rails #{Rails::VERSION::STRING}" if %w(--version -v).include? ARGV.first
 
+freeze   = ARGV.any? { |option| %w(--freeze -f).include?(option) }
+app_path = ARGV.first
+
 require File.dirname(__FILE__) + '/../lib/rails_generator'
 
 require 'rails_generator/scripts/generate'
 Rails::Generator::Base.use_application_sources!
 Rails::Generator::Scripts::Generate.new.run(ARGV, :generator => 'app')
+
+Dir.chdir(app_path) { `rake rails:freeze:gems`; puts "froze" } if freeze
