@@ -1,8 +1,12 @@
 *SVN*
 
-* Make Rails::VERSION implicitly loadable. Closes #4491. [Nicholas Seckar]
+* Make Rails::VERSION implicitly loadable #4491. [Nicholas Seckar]
 
-* Teach Rails apps to only load gems of the same Rails version they were generated with. [Nicholas Seckar]
+* Fixed rake rails:freeze:gems #4518 [benji@silverinsanity.com]
+
+* Added -f/--freeze option to rails command for freezing the application to the Rails version it was generated with [DHH]
+
+* Added gem binding of apps generated through the rails command to the gems of they were generated with [Nicholas Seckar]
 
 * Added expiration settings for JavaScript, CSS, HTML, and images to default lighttpd.conf [DHH]
 
